[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0"
bincode = "1.3"

#concrete = "0.2.0"
concrete-shortint = "0.1.1"

